--- a/Primary.css
+++ b/Primary.css
@@ -19,6 +19,7 @@ body {
 
 .Header {
     box-sizing: border-box;
+    border-radius: 0 0 85% 85% / 30%;
     width: 100%;
     height: 6%;
     display: flex;
@@ -51,8 +52,13 @@ body {
     font-size: small;
     font-family: 'Playfair Display', serif;
     font-family: 'Poppins', sans-serif;
+    
   
   }
+  select:hover {
+    color: #444645;
+    background: darkgray;
+    }
 
   .Footer {
     position: absolute;
